--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
   </style>
+  <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png">
+  <link rel="manifest" href="/src/assets/site.webmanifest">
+  <link rel="mask-icon" href="/src/assets/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <meta charset="UTF-8" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
